feat: jwt token impl
