# internal/handler/router.go
@@ -4,6 +4,7 @@ import "net/http"
 
 type UserHandler interface {
 	Create(http.ResponseWriter, *http.Request)
+	Login(http.ResponseWriter, *http.Request)
 }
 
 type QuizHandler interface {
@@ -26,20 +27,27 @@ type AttemptHandler interface {
 	Create(http.ResponseWriter, *http.Request)
 }
 
-func RegisterRoutes(mux *http.ServeMux, userHandler UserHandler, quizHandler QuizHandler, assignmentHandler AssignmentHandler, attemptHandler AttemptHandler) {
+func auth(secret string, h http.HandlerFunc) http.HandlerFunc {
+	return AuthMiddleware(secret, h).ServeHTTP
+}
+
+func RegisterRoutes(mux *http.ServeMux, jwtSecret string, userHandler UserHandler, quizHandler QuizHandler, assignmentHandler AssignmentHandler, attemptHandler AttemptHandler) {
+	// публичные маршруты
 	mux.HandleFunc("POST /user", userHandler.Create)
+	mux.HandleFunc("POST /auth/login", userHandler.Login)
 
-	mux.HandleFunc("POST /quiz", quizHandler.Create)
-	mux.HandleFunc("POST /quiz/generate", quizHandler.Generate)
-	mux.HandleFunc("GET /quiz", quizHandler.FindAll)
-	mux.HandleFunc("GET /quiz/{quizId}", quizHandler.FindById)
-	mux.HandleFunc("GET /user/{userId}/quizzes", quizHandler.FindByUserId)
-	mux.HandleFunc("GET /user/{userId}/quizzes/created", quizHandler.FindCreated)
-	mux.HandleFunc("GET /user/{userId}/quizzes/assigned", quizHandler.FindAssigned)
+	// защищённые маршруты
+	mux.HandleFunc("POST /quiz", auth(jwtSecret, quizHandler.Create))
+	mux.HandleFunc("POST /quiz/generate", auth(jwtSecret, quizHandler.Generate))
+	mux.HandleFunc("GET /quiz", auth(jwtSecret, quizHandler.FindAll))
+	mux.HandleFunc("GET /quiz/{quizId}", auth(jwtSecret, quizHandler.FindById))
+	mux.HandleFunc("GET /user/{userId}/quizzes", auth(jwtSecret, quizHandler.FindByUserId))
+	mux.HandleFunc("GET /user/{userId}/quizzes/created", auth(jwtSecret, quizHandler.FindCreated))
+	mux.HandleFunc("GET /user/{userId}/quizzes/assigned", auth(jwtSecret, quizHandler.FindAssigned))
 
-	mux.HandleFunc("POST /assignment", assignmentHandler.Create)
-	mux.HandleFunc("GET /assignment/{id}", assignmentHandler.FindById)
-	mux.HandleFunc("GET /user/{userId}/assignments", assignmentHandler.FindByStudentId)
+	mux.HandleFunc("POST /assignment", auth(jwtSecret, assignmentHandler.Create))
+	mux.HandleFunc("GET /assignment/{id}", auth(jwtSecret, assignmentHandler.FindById))
+	mux.HandleFunc("GET /user/{userId}/assignments", auth(jwtSecret, assignmentHandler.FindByStudentId))
 
-	mux.HandleFunc("POST /attempt", attemptHandler.Create)
+	mux.HandleFunc("POST /attempt", auth(jwtSecret, attemptHandler.Create))
 }
